--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <ul>
-            <li class="logo"><img src="images/logo.svg" alt=""></li>
+            <li class="logo></li>
             <li></li>
             <li></li>
             <li></li>
