--- a/index.html
+++ b/index.html
@@ -8,13 +8,20 @@
 </head>
 <body>
     <header>
-        <ul>
-            <li class="logo></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul>
+        <nav>
+            <ul class="leftNav">
+                <li class="logo"><img src="images/logo.PNG"="logo"/></li>
+                <li>features</li>
+                <li>articles</li>
+                <li>blog</li>
+                <li>give a gift</li>
+            </ul>
+            <ul class="rightNav">
+                <li>asd</li>
+                <li>asd</li>
+                <li>asd</li>
+            </ul>
+        </nav>
     </header>
 </body>
 </html>
