--- a/index.html
+++ b/index.html
@@ -1,27 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:400,700,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
-</head>
-<body>
-    <header>
-        <nav>
-            <ul class="leftNav">
-                <li class="logo"><img src="images/logo.PNG"="logo"/></li>
-                <li>features</li>
-                <li>articles</li>
-                <li>blog</li>
-                <li>give a gift</li>
-            </ul>
-            <ul class="rightNav">
-                <li>asd</li>
-                <li>asd</li>
-                <li>asd</li>
-            </ul>
-        </nav>
-    </header>
-</body>
+  </head>
+  <body>
+    <header><!--header start-->
+      <!--logo-->
+        <a href="index.html"><img src="images/logo.PNG"="logo"/></a>
+      <nav><!--nav start-->
+        <ul class="leftNav"><!--leftNav start-->
+          <li>features</li>
+          <li>articles</li>
+          <li>blog</li>
+          <li>give a gift</li>
+        </ul><!--leftNav end-->
+        <ul class="rightNav"><!--rightNav start-->
+          <li>
+            <select>
+              <option>en</option>
+              <option>English</option>
+            </select>
+          </li>
+          <li>log in</li>
+          <li><button type="button">sign up</button></li>
+        </ul><!--rightNav end-->
+      </nav><!--nav end-->
+    </header><!--header end-->
+    <section><!--section start-->
+      <div class="content">
+        <h1>
+          asd
+          <img src=""
+        </h1>
+      </div>
+    </section><!--section end-->
+  </body>
 </html>
