--- a/index.html
+++ b/index.html
@@ -36,10 +36,12 @@
     <section><!--section start-->
       <div class="content">
         <h1>
-          asd
-          <img src=""
+          Healthy living.
+Simplified.
         </h1>
+        
       </div>
+      <img src="images/phone.8348ce93.png">
     </section><!--section end-->
   </body>
 </html>
