--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           Healthy living.
 Simplified.
         </h1>
-        
+        <p>The digital self-care app that helps you reach your health and weight goals through better eating.</p>
       </div>
       <img src="images/phone.8348ce93.png">
     </section><!--section end-->
