WIP: section buttons

--- a/index.html
+++ b/index.html
@@ -36,10 +36,13 @@
     <section><!--section start-->
       <div class="content">
         <h1>
-          Healthy living.
-Simplified.
+          Healthy living.Simplified.
         </h1>
         <p>The digital self-care app that helps you reach your health and weight goals through better eating.</p>
+        <div class="btnRow">
+          <button type="button" class="btnReadMore">read more</button>
+          <button type="button">sign up from $3.75/mon</button>
+        </div>
       </div>
       <img src="images/phone.8348ce93.png">
     </section><!--section end-->
