WIP: section img

--- a/index.html
+++ b/index.html
@@ -41,10 +41,13 @@
         <p>The digital self-care app that helps you reach your health and weight goals through better eating.</p>
         <div class="btnRow">
           <button type="button" class="btnReadMore">read more</button>
-          <button type="button">sign up from $3.75/mon</button>
+          <button type="button" class="btnSignUp">sign up from $3.75/mon</button>
         </div>
       </div>
       <img src="images/phone.8348ce93.png">
+      <div class="rating">
+        <p>276 491 reviews and counting</p>
+      </div>
     </section><!--section end-->
   </body>
 </html>
