--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
       <img src="images/phone.8348ce93.png">
       <div class="rating">
         <p>276 491 reviews and counting</p>
+        <div class="ratingApple">
+          <img src="images/image5.png" alt="">
+          <img src="images/image5.png" alt="">
+        </div>
       </div>
     </section><!--section end-->
   </body>
