--- a/index.html
+++ b/index.html
@@ -48,10 +48,13 @@
       <div class="rating">
         <p>276 491 reviews and counting</p>
         <div class="ratingApple">
-          <img src="images/image5.png" alt="">
-          <img src="images/image5.png" alt="">
+          <!-- <img src="images/image5.png" alt="">
+          <img src="images/image5.png" alt=""> -->
         </div>
       </div>
     </section><!--section end-->
+    <div class="about">
+      <h1>What is LifeSum?</h1>
+    </div>
   </body>
 </html>
