--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
     </section><!--section end-->
     <div class="about">
       <h1>What is LifeSum?</h1>
+      <div class="aboutCol">
+        <img
+      </div>
     </div>
   </body>
 </html>
