--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
     <div class="about">
       <h1>What is LifeSum?</h1>
       <div class="aboutCol">
-        <img
+        <img src="images/usp-barcode.a01948fa.svg">
+      </div>
+      <div class="aboutCol">
+        <img src="images/usp-barcode.a01948fa.svg">
       </div>
     </div>
   </body>
