feat: diet plan

--- a/index.html
+++ b/index.html
@@ -53,14 +53,46 @@
         </div>
       </div>
     </section><!--section end-->
-    <div class="about">
+    <div class="about"><!--about start-->
       <h1>What is LifeSum?</h1>
-      <div class="aboutCol">
-        <img src="images/usp-barcode.a01948fa.svg">
-      </div>
-      <div class="aboutCol">
-        <img src="images/usp-barcode.a01948fa.svg">
-      </div>
+      <div class="aboutRow"><!--aboutRow start-->
+        <div class="aboutCol"><!--aboutCol start-->
+          <img src="images/usp-diets.17c56889.svg">
+          <h3>Find a diet you love</h3>
+          <p>Find a nutritious Diet that fits your lifestyle and food preferences. Take charge of your daily habits with one of the many ongoing Diets including Clean Eating and High Protein.</p>
+        </div><!--aboutCol end-->
+        <div class="aboutCol"><!--aboutCol start-->
+          <img src="images/usp-mealplans.0a2885b2.svg">
+          <h3>Start a simplified Meal Plan</h3>
+          <p>Follow a 7-21 day Meal Plan and get four pre-planned recipes a day. Depending on your health goals, there are many Meal Plans to choose from including Keto Burn and Vegan for a week.</p>
+        </div><!--aboutCol end-->
+        <div class="aboutCol"><!--aboutCol start-->
+          <img src="images/usp-recipes.2628c7bf.svg">
+          <h3>Enjoy hundreds of tasty and nutritious recipes</h3>
+          <p>Enjoy hundreds of easy-to-cook recipes filled with nutritious and tasty food. All of the recipes include information about their nutritional value so you can keep track of your daily energy intake.</p>
+        </div><!--aboutCol end-->
+      </div><!--aboutRow end-->
+      <div class="aboutRow"><!--aboutRow start-->
+        <div class="aboutCol"><!--aboutCol start-->
+          <img src="images/usp-barcode.a01948fa.svg">
+          <h3>Find a diet you love</h3>
+          <p>Identify your food items with the super easy-to-use barcode scanner. Scan the item, log it and get the nutritional information you need to stay on track.</p>
+        </div><!--aboutCol end-->
+        <div class="aboutCol"><!--aboutCol start-->
+          <img src="images/usp-trackers.83991939.svg">
+          <h3>Track your way to success</h3>
+          <p>Track your activities and what you eat with the help of our food-, exercise- and water trackers to maintain a balanced everyday life.</p>
+        </div><!--aboutCol end-->
+        <div class="aboutCol"><!--aboutCol start-->
+          <img src="images/usp-personalize.c6413210.svg">
+          <h3>Create your own healthy journey</h3>
+          <p>To help you reach your goals and customize your health journey you can add your favorite meals, food items, recipes and exercises to your Favorites.</p>
+        </div><!--aboutCol end-->
+      </div><!--aboutRow end-->
+      
+    </div><!--about end-->
+    <div class="dietPlan">
+      asd
     </div>
   </body>
 </html>
