--- a/index.html
+++ b/index.html
@@ -11,17 +11,22 @@
     <title>Document</title>
   </head>
   <body>
-    <header><!--header start-->
+    <header>
+      <!--header start-->
       <!--logo-->
-        <a href="index.html"><img src="images/logo.PNG"="logo"/></a>
-      <nav><!--nav start-->
-        <ul class="leftNav"><!--leftNav start-->
+      <a href="index.html"><img src="images/logo.PNG"="logo"/></a>
+      <nav>
+        <!--nav start-->
+        <ul class="leftNav">
+          <!--leftNav start-->
           <li>features</li>
           <li>articles</li>
           <li>blog</li>
           <li>give a gift</li>
-        </ul><!--leftNav end-->
-        <ul class="rightNav"><!--rightNav start-->
+        </ul>
+        <!--leftNav end-->
+        <ul class="rightNav">
+          <!--rightNav start-->
           <li>
             <select>
               <option>en</option>
@@ -30,21 +35,30 @@
           </li>
           <li>log in</li>
           <li><button type="button">sign up</button></li>
-        </ul><!--rightNav end-->
-      </nav><!--nav end-->
-    </header><!--header end-->
-    <section><!--section start-->
+        </ul>
+        <!--rightNav end-->
+      </nav>
+      <!--nav end-->
+    </header>
+    <!--header end-->
+    <section>
+      <!--section start-->
       <div class="content">
         <h1>
           Healthy living.Simplified.
         </h1>
-        <p>The digital self-care app that helps you reach your health and weight goals through better eating.</p>
+        <p>
+          The digital self-care app that helps you reach your health and weight
+          goals through better eating.
+        </p>
         <div class="btnRow">
           <button type="button" class="btnReadMore">read more</button>
-          <button type="button" class="btnSignUp">sign up from $3.75/mon</button>
+          <button type="button" class="btnSignUp">
+            sign up from $3.75/mon
+          </button>
         </div>
       </div>
-      <img src="images/phone.8348ce93.png">
+      <img src="images/phone.8348ce93.png" />
       <div class="rating">
         <p>276 491 reviews and counting</p>
         <div class="ratingApple">
@@ -52,47 +66,104 @@
           <img src="images/image5.png" alt=""> -->
         </div>
       </div>
-    </section><!--section end-->
-    <div class="about"><!--about start-->
+    </section>
+    <!--section end-->
+    <div class="about">
+      <!--about start-->
       <h1>What is LifeSum?</h1>
-      <div class="aboutRow"><!--aboutRow start-->
-        <div class="aboutCol"><!--aboutCol start-->
-          <img src="images/usp-diets.17c56889.svg">
+      <div class="aboutRow">
+        <!--aboutRow start-->
+        <div class="aboutCol">
+          <!--aboutCol start-->
+          <img src="images/usp-diets.17c56889.svg" />
           <h3>Find a diet you love</h3>
-          <p>Find a nutritious Diet that fits your lifestyle and food preferences. Take charge of your daily habits with one of the many ongoing Diets including Clean Eating and High Protein.</p>
-        </div><!--aboutCol end-->
-        <div class="aboutCol"><!--aboutCol start-->
-          <img src="images/usp-mealplans.0a2885b2.svg">
+          <p>
+            Find a nutritious Diet that fits your lifestyle and food
+            preferences. Take charge of your daily habits with one of the many
+            ongoing Diets including Clean Eating and High Protein.
+          </p>
+        </div>
+        <!--aboutCol end-->
+        <div class="aboutCol">
+          <!--aboutCol start-->
+          <img src="images/usp-mealplans.0a2885b2.svg" />
           <h3>Start a simplified Meal Plan</h3>
-          <p>Follow a 7-21 day Meal Plan and get four pre-planned recipes a day. Depending on your health goals, there are many Meal Plans to choose from including Keto Burn and Vegan for a week.</p>
-        </div><!--aboutCol end-->
-        <div class="aboutCol"><!--aboutCol start-->
-          <img src="images/usp-recipes.2628c7bf.svg">
+          <p>
+            Follow a 7-21 day Meal Plan and get four pre-planned recipes a day.
+            Depending on your health goals, there are many Meal Plans to choose
+            from including Keto Burn and Vegan for a week.
+          </p>
+        </div>
+        <!--aboutCol end-->
+        <div class="aboutCol">
+          <!--aboutCol start-->
+          <img src="images/usp-recipes.2628c7bf.svg" />
           <h3>Enjoy hundreds of tasty and nutritious recipes</h3>
-          <p>Enjoy hundreds of easy-to-cook recipes filled with nutritious and tasty food. All of the recipes include information about their nutritional value so you can keep track of your daily energy intake.</p>
-        </div><!--aboutCol end-->
-      </div><!--aboutRow end-->
-      <div class="aboutRow"><!--aboutRow start-->
-        <div class="aboutCol"><!--aboutCol start-->
-          <img src="images/usp-barcode.a01948fa.svg">
+          <p>
+            Enjoy hundreds of easy-to-cook recipes filled with nutritious and
+            tasty food. All of the recipes include information about their
+            nutritional value so you can keep track of your daily energy intake.
+          </p>
+        </div>
+        <!--aboutCol end-->
+      </div>
+      <!--aboutRow end-->
+      <div class="aboutRow">
+        <!--aboutRow start-->
+        <div class="aboutCol">
+          <!--aboutCol start-->
+          <img src="images/usp-barcode.a01948fa.svg" />
           <h3>Find a diet you love</h3>
-          <p>Identify your food items with the super easy-to-use barcode scanner. Scan the item, log it and get the nutritional information you need to stay on track.</p>
-        </div><!--aboutCol end-->
-        <div class="aboutCol"><!--aboutCol start-->
-          <img src="images/usp-trackers.83991939.svg">
+          <p>
+            Identify your food items with the super easy-to-use barcode scanner.
+            Scan the item, log it and get the nutritional information you need
+            to stay on track.
+          </p>
+        </div>
+        <!--aboutCol end-->
+        <div class="aboutCol">
+          <!--aboutCol start-->
+          <img src="images/usp-trackers.83991939.svg" />
           <h3>Track your way to success</h3>
-          <p>Track your activities and what you eat with the help of our food-, exercise- and water trackers to maintain a balanced everyday life.</p>
-        </div><!--aboutCol end-->
-        <div class="aboutCol"><!--aboutCol start-->
-          <img src="images/usp-personalize.c6413210.svg">
+          <p>
+            Track your activities and what you eat with the help of our food-,
+            exercise- and water trackers to maintain a balanced everyday life.
+          </p>
+        </div>
+        <!--aboutCol end-->
+        <div class="aboutCol">
+          <!--aboutCol start-->
+          <img src="images/usp-personalize.c6413210.svg" />
           <h3>Create your own healthy journey</h3>
-          <p>To help you reach your goals and customize your health journey you can add your favorite meals, food items, recipes and exercises to your Favorites.</p>
-        </div><!--aboutCol end-->
-      </div><!--aboutRow end-->
-      
-    </div><!--about end-->
-    <div class="dietPlan">
-      asd
+          <p>
+            To help you reach your goals and customize your health journey you
+            can add your favorite meals, food items, recipes and exercises to
+            your Favorites.
+          </p>
+        </div>
+        <!--aboutCol end-->
+      </div>
+      <!--aboutRow end-->
+      <div class="mainDiv">
+        <!--mainDiv start-->
+        <div class="dietPlan">
+          <!--dietPlan start-->
+          <img src="images/apple-quiz.ce43117b.svg" alt="" />
+          <div class="contentBtn">
+            <!--contentBtn start-->
+            <h1>What's the right Meal Plan or Diet for you?</h1>
+            <button>take the quiz</button>
+          </div>
+          <!--contentBtn end-->
+        </div>
+        <!--dietPlan end-->
+      </div>
+      <!--mainDiv end-->
     </div>
+    <!--about end-->
+    <div class="testimonial"><!--testimonial start--> 
+      <img src="images/heart-bubble.5b57917f.svg" alt="">
+      
+    </div><!--testimonial end-->
   </body>
 </html>
