--- a/index.html
+++ b/index.html
@@ -161,9 +161,49 @@
       <!--mainDiv end-->
     </div>
     <!--about end-->
-    <div class="testimonial"><!--testimonial start--> 
-      <img src="images/heart-bubble.5b57917f.svg" alt="">
-      
-    </div><!--testimonial end-->
+    <div class="testimonial">
+      <!--testimonial start-->
+      <img src="images/heart-bubble.5b57917f.svg" alt="" />
+      <div class="certificate">
+        <img src="images/award-android.195a5325.png" alt="" />
+        <img src="images/award-apple-2018.a7bd9cdc.png" alt="" />
+        <img src="images/award-google-play.ea2e9b9f.png" alt="" />
+      </div>
+      <div class="review">
+        <div class="reviewText">
+          <div class="star">
+            <img src="images/star.c076ab25.svg" alt="" />
+            <img src="images/star.c076ab25.svg" alt="" />
+            <img src="images/star.c076ab25.svg" alt="" />
+            <img src="images/star.c076ab25.svg" alt="" />
+            <img src="images/star.c076ab25.svg" alt="" />
+          </div>
+          “Seriously, I’ve tried it all. Get this! It’s super easy, and if you
+          want personalized help it’s CHEAP and WORTH EVERY PENNY. I’m a
+          happier, healthier gal.”
+        </div>
+        <div class="reviewText">
+          <div class="star">
+            <img src="images/star.c076ab25.svg" alt="" />
+            <img src="images/star.c076ab25.svg" alt="" />
+            <img src="images/star.c076ab25.svg" alt="" />
+            <img src="images/star.c076ab25.svg" alt="" />
+            <img src="images/star.c076ab25.svg" alt="" />
+          </div>
+          “5/5 loveee this app, helps me stay on track and it’s easy to use! Best fitness app to keep track!”
+        </div>
+        <div class="reviewText">
+          <div class="star">
+            <img src="images/star.c076ab25.svg" alt="" />
+            <img src="images/star.c076ab25.svg" alt="" />
+            <img src="images/star.c076ab25.svg" alt="" />
+            <img src="images/star.c076ab25.svg" alt="" />
+            <img src="images/star.c076ab25.svg" alt="" />
+          </div>
+          “I love this app! It has so many features and great advice. With the different meal plans and exact calorie counts, this app was perfect for me.”
+        </div>
+      </div>
+    </div>
+    <!--testimonial end-->
   </body>
 </html>
