--- a/index.html
+++ b/index.html
@@ -203,7 +203,14 @@
           “I love this app! It has so many features and great advice. With the different meal plans and exact calorie counts, this app was perfect for me.”
         </div>
       </div>
+      <div class="reviewImg">
+        <div class="text">
+          <h1>-4.7KG IN 3 WEEKS</h1>
+          <p>”I’ve learned that dieting doesn’t have to be difficult, and was really surprised I was allowed to eat tasty things like sandwiches and dressings! The food was delicious, easy to cook, and you even get a shopping list. This program was so easy to follow, and my cravings were gone after only a few days!”</p>
+        </div>
+      </div>
     </div>
     <!--testimonial end-->
+    
   </body>
 </html>
