--- a/index.html
+++ b/index.html
@@ -190,7 +190,8 @@
             <img src="images/star.c076ab25.svg" alt="" />
             <img src="images/star.c076ab25.svg" alt="" />
           </div>
-          “5/5 loveee this app, helps me stay on track and it’s easy to use! Best fitness app to keep track!”
+          “5/5 loveee this app, helps me stay on track and it’s easy to use!
+          Best fitness app to keep track!”
         </div>
         <div class="reviewText">
           <div class="star">
@@ -200,17 +201,24 @@
             <img src="images/star.c076ab25.svg" alt="" />
             <img src="images/star.c076ab25.svg" alt="" />
           </div>
-          “I love this app! It has so many features and great advice. With the different meal plans and exact calorie counts, this app was perfect for me.”
+          “I love this app! It has so many features and great advice. With the
+          different meal plans and exact calorie counts, this app was perfect
+          for me.”
         </div>
       </div>
       <div class="reviewImg">
         <div class="text">
           <h1>-4.7KG IN 3 WEEKS</h1>
-          <p>”I’ve learned that dieting doesn’t have to be difficult, and was really surprised I was allowed to eat tasty things like sandwiches and dressings! The food was delicious, easy to cook, and you even get a shopping list. This program was so easy to follow, and my cravings were gone after only a few days!”</p>
+          <p>
+            ”I’ve learned that dieting doesn’t have to be difficult, and was
+            really surprised I was allowed to eat tasty things like sandwiches
+            and dressings! The food was delicious, easy to cook, and you even
+            get a shopping list. This program was so easy to follow, and my
+            cravings were gone after only a few days!”
+          </p>
         </div>
       </div>
     </div>
     <!--testimonial end-->
-    
   </body>
 </html>
