--- a/index.html
+++ b/index.html
@@ -164,50 +164,50 @@
     <div class="testimonial">
       <!--testimonial start-->
       <img src="images/heart-bubble.5b57917f.svg" alt="" />
-      <div class="certificate">
+      <div class="certificate"><!--certificate start-->
         <img src="images/award-android.195a5325.png" alt="" />
         <img src="images/award-apple-2018.a7bd9cdc.png" alt="" />
         <img src="images/award-google-play.ea2e9b9f.png" alt="" />
-      </div>
-      <div class="review">
-        <div class="reviewText">
-          <div class="star">
+      </div><!--certificate end-->
+      <div class="review"><!--review start-->
+        <div class="reviewText"><!--reviewText start-->
+          <div class="star"><!--star start-->
             <img src="images/star.c076ab25.svg" alt="" />
             <img src="images/star.c076ab25.svg" alt="" />
             <img src="images/star.c076ab25.svg" alt="" />
             <img src="images/star.c076ab25.svg" alt="" />
             <img src="images/star.c076ab25.svg" alt="" />
-          </div>
+          </div><!--star end-->
           “Seriously, I’ve tried it all. Get this! It’s super easy, and if you
           want personalized help it’s CHEAP and WORTH EVERY PENNY. I’m a
           happier, healthier gal.”
-        </div>
-        <div class="reviewText">
-          <div class="star">
+        </div><!--reviewText end-->
+        <div class="reviewText"><!--reviewText start-->
+          <div class="star"><!--star start-->
             <img src="images/star.c076ab25.svg" alt="" />
             <img src="images/star.c076ab25.svg" alt="" />
             <img src="images/star.c076ab25.svg" alt="" />
             <img src="images/star.c076ab25.svg" alt="" />
             <img src="images/star.c076ab25.svg" alt="" />
-          </div>
+          </div><!--star end-->
           “5/5 loveee this app, helps me stay on track and it’s easy to use!
           Best fitness app to keep track!”
-        </div>
-        <div class="reviewText">
-          <div class="star">
+        </div><!--reviewText end-->
+        <div class="reviewText"><!--reviewText start-->
+          <div class="star"><!--star start-->
             <img src="images/star.c076ab25.svg" alt="" />
             <img src="images/star.c076ab25.svg" alt="" />
             <img src="images/star.c076ab25.svg" alt="" />
             <img src="images/star.c076ab25.svg" alt="" />
             <img src="images/star.c076ab25.svg" alt="" />
-          </div>
+          </div><!--star end-->
           “I love this app! It has so many features and great advice. With the
           different meal plans and exact calorie counts, this app was perfect
           for me.”
-        </div>
-      </div>
-      <div class="reviewImg">
-        <div class="text">
+        </div><!--reviewText end-->
+      </div><!--review end-->
+      <div class="reviewImg"><!--reviewImg start-->
+        <div class="text"><!--text start-->
           <h1>-4.7KG IN 3 WEEKS</h1>
           <p>
             ”I’ve learned that dieting doesn’t have to be difficult, and was
@@ -216,9 +216,27 @@
             get a shopping list. This program was so easy to follow, and my
             cravings were gone after only a few days!”
           </p>
-        </div>
-      </div>
+        </div><!--text end-->
+      </div><!--reviewImg end-->
+      <div class="signUp"><!--signup start-->
+        <h1>The first step to a healthier you takes less</h1>
+          <h1>than a minute.</h1>
+          <button type="button">sign up</button>
+          <p><span class="strike">$3.33</span> <span class="green">$2.33</span>/month - Save <span class="green">30%</span>!</p>
+          <img src="images/image4.png" alt="">
+      </div><!--signup end-->
     </div>
     <!--testimonial end-->
+    <footer><!--footer start-->
+      <div class="content"><!--content start-->
+        <div class="linksCol"><!--linksCol start-->
+          <img src="images/logo_image.PNG" alt="">
+          <ul>
+            <li></li>
+          </ul>
+        </div><!--linksCol end-->
+      </div><!--content end-->
+    </footer><!--footer end-->
+
   </body>
 </html>
