[WIP] footer links

--- a/index.html
+++ b/index.html
@@ -232,7 +232,17 @@
         <div class="linksCol"><!--linksCol start-->
           <img src="images/logo_image.PNG" alt="">
           <ul>
-            <li></li>
+            <li class="heading">work at lifeum</li>
+            <li><a href="#">careers</a></li>
+          </ul>
+          <ul>
+            <li class="heading">connect</li>
+            <li><a href="#">instagram</a></li>
+            <li><a href="#">YouTube</a></li>
+            <li><a href="#">pinterest</a></li>
+            <li><a href="#">facebook</a></li>
+            <li><a href="#">twitter</a></li>
+            <li><a href="#">blog</a></li>
           </ul>
         </div><!--linksCol end-->
       </div><!--content end-->
