--- a/index.html
+++ b/index.html
@@ -59,13 +59,16 @@
         </div>
       </div>
       <img src="images/phone.8348ce93.png" />
-      <div class="rating">
+      <div class="rating"><!--rating start-->
         <p>276 491 reviews and counting</p>
-        <div class="ratingApple">
-          <!-- <img src="images/image5.png" alt="">
-          <img src="images/image5.png" alt=""> -->
-        </div>
-      </div>
+        <div class="ratingApple"><!--rating start-->
+          <img src="images/star.c076ab25.svg" alt="">
+          <img src="images/star.c076ab25.svg" alt="">
+          <img src="images/star.c076ab25.svg" alt="">
+          <img src="images/star.c076ab25.svg" alt="">
+          <img src="images/star.c076ab25.svg" alt="">
+        </div><!--ratingApple end-->
+      </div><!--rating end-->
     </section>
     <!--section end-->
     <div class="about">
