--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Lifesum Health App – Get Healthy & Lose Weight – Lifesum</title>
+    <link rel="shortcut icon" sizes="16x16" href="https://lifesum.com/public/favicon-16x16.png" type="image/x-icon">
+    <link rel="shortcut icon" sizes="32x32" href="https://lifesum.com/public/favicon-32x32.png" type="image/x-icon">
+    <link rel="shortcut icon" sizes="64x64" href="https://lifesum.com/public/favicon-64x64.png" type="image/x-icon">
   </head>
   <body>
     <header>
